--- a/SampleApp/AirlineInfo/src/assets/index.html
+++ b/SampleApp/AirlineInfo/src/assets/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>W-M's Elm Airlines App</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+  <script src="./assets/fake_server/AA.json" type="application/json">
+   
+  </script>
 </head>
 <body>
 </body>
