--- a/SampleApp/GithubUserInfo/src/assets/index.html
+++ b/SampleApp/GithubUserInfo/src/assets/index.html
@@ -5,11 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>W-M's Elm Airlines App</title>
+  <title>W-M's Elm Github User Info App</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
-  <script src="./assets/fake_server/AA.json" type="application/json">
-   
-  </script>
 </head>
 <body>
 </body>
