--- a/SampleApp/GithubUserInfo/src/assets/index.html
+++ b/SampleApp/GithubUserInfo/src/assets/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>W-M's Elm Github User Info App</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
